--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -12,11 +12,17 @@
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">设置密码</h1>
+		    <h1 class="mui-title">注册</h1>
 		</header>
 		<div class="mui-content between">
-			<h4>设置密码</h4>
-			<p class="limit">8-20位字符，不可以是纯数字</p>
+			<!--<h4>设置密码</h4>
+			<p class="limit">8-20位字符，不可以是纯数字</p>-->
+			<div class="mui-input-row info">
+				<input type="text" class="mui-input-clear" placeholder="请输入用户名">
+			</div>
+			<div class="mui-input-row info">
+				<input type="text" class="mui-input-clear" placeholder="请输入邮箱">
+			</div>
 			<div class="mui-input-row info">
 				<input type="password" class="mui-input-password" placeholder="请输入密码" id="pass">
 			</div>
