--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -6,35 +6,36 @@
 		<title>设置密码</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/setPassword.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/setPassword.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">注册</h1>
+			<h1 class="mui-title">注册</h1>
 		</header>
 		<div class="mui-content between">
-			<!--<h4>设置密码</h4>
-			<p class="limit">8-20位字符，不可以是纯数字</p>-->
+			<!--<h4>注册</h4>-->
+			<!--<p class="limit">8-20位字符，不可以是纯数字</p>-->
 			<div class="mui-input-row info">
-				<input type="text" class="mui-input-clear" placeholder="请输入用户名">
+				<input type="text" value="" class="mui-input-clear" placeholder="请输入用户名" id="name">
 			</div>
 			<div class="mui-input-row info">
-				<input type="text" class="mui-input-clear" placeholder="请输入邮箱">
+				<input type="text" value="" class="mui-input-clear" placeholder="请输入邮箱" id="email">
 			</div>
 			<div class="mui-input-row info">
-				<input type="password" class="mui-input-password" placeholder="请输入密码" id="pass">
+				<input type="password" value="" class="mui-input-password" placeholder="请输入密码" id="pass">
 			</div>
 			<div class="mui-input-row info">
-				<input type="password" class="mui-input-password" placeholder="请再次输入密码" id="ensurePass">
+				<input type="password" value="" class="mui-input-password" placeholder="请再次输入密码" id="ensurePass">
 			</div>
 			<div class="mui-input-row info">
-				<input type="text" class="mui-input-clear" placeholder="请输入邀请码（选填）">
+				<input type="text" value="" class="mui-input-clear" placeholder="请输入邀请码（选填）">
 			</div>
 			<div class="mui-input-row mui-checkbox agreement">
-			    <input name="checkbox1" id="isagree" value="Item 1" type="checkbox" checked>
-			    <label>我同意<a>《用户协议》</a></label>
+				<input name="checkbox1" id="isagree" value="Item 1" type="checkbox" checked>
+				<label>我同意<a>《用户协议》</a></label>
 			</div>
 			<button type="button" class="mui-btn mui-btn-primary can" id="zhuce">注册</button>
 		</div>
@@ -44,14 +45,62 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
-			$("#isagree").on("change", function(){
-				if ($("#isagree").is(":checked")) {
+			console.log(api)
+			$("#isagree").on("change", function() {
+				if($("#isagree").is(":checked")) {
 					$("#zhuce").removeClass("cannot")
 					$("#zhuce").addClass("can")
 				} else {
 					$("#zhuce").removeClass("can")
 					$("#zhuce").addClass("cannot")
 				}
+			})
+			$("#zhuce").on("click", function() {
+				if ($("#name").val() == "") {
+					mui.toast('用户名不能为空');
+					return false;
+				}
+				if ($("#email").val() == "") {
+					mui.toast('邮箱不能为空');
+					return false;
+				}
+				if ($("#pass").val() == "") {
+					mui.toast('密码不能为空');
+					return false;
+				}
+				if ($("#pass").val() != $("#ensurePass").val()) {
+					mui.toast('两次密码不一致');
+					return false;
+				}
+				if($("#isagree").is(":checked") == false) {
+					mui.toast('未同意用户协议');
+					return false;
+				}
+				mui.showLoading("加载中...", "div");
+				$.ajax({
+					type: "post",
+					url: api + "user",
+					data: {
+						name: $("#name").val(),
+						email: $("#email").val(),
+						password: $("#pass").val()
+					},
+					async: true,
+					success: function(ret) {
+						mui.hideLoading();
+						console.log(ret);
+						if(ret.success) {
+							mui.toast('注册成功');
+							var time = null;
+							clearTimeout(time);
+							time = setTimeout(function(){
+								plus.webview.currentWebview().close();
+							}, 1000)
+						} else{
+							mui.toast(ret.msg);
+						}
+					}
+				})
 			})
 		</script>
 	</body>
