--- a/pages/mine.html
+++ b/pages/mine.html
@@ -71,8 +71,7 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			detection()
-			console.log(store.get("userInfo").id)
+			detection();
 			// 判断是否登录
 			function detection() {
 				if (store.get("userInfo") == undefined) {
