--- a/public/trade.html
+++ b/public/trade.html
@@ -53,9 +53,9 @@
 						可用
 						<span class="orange_word">5.4567</span> BTC
 					</p>
-					<div class="mui-input-row mui-input-range">
+					<!--<div class="mui-input-row mui-input-range">
 						<input type="range" id='block-range' value="0" min="0" max="100">
-					</div>
+					</div>-->
 					<div class="sliding_box">
 						<div class="green_bg"></div>
 						<input type="range" value="0" id="slideBox" />
