--- a/pages/mine.html
+++ b/pages/mine.html
@@ -72,6 +72,7 @@
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			detection();
+			// store.clearAll()
 			// 判断是否登录
 			function detection() {
 				if (store.get("userInfo") == undefined) {
