--- a/public/trade.html
+++ b/public/trade.html
@@ -57,8 +57,8 @@
 						<input type="range" id='block-range' value="0" min="0" max="100">
 					</div>-->
 					<div class="sliding_box">
-						<div class="green_bg"></div>
-						<input type="range" value="0" id="slideBox" />
+						<!--<div class="green_bg"></div>-->
+						<input type="range" value="0" id="slideBox" class="green_slide"/>
 					</div>
 					<ul class="sliding_alert">
 						<li>0%</li>
