--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -22,11 +22,8 @@
 				<img src="../img/property/code_border.png" alt="" class="codeBorder" />
 			</div>
 			<div class="address_box">
-				<!--<textarea readonly="readonly" id="addressBox"></textarea>-->
-				<h4 id="addressBox"></h4>
-				<!--<button id="addressBox"></button>-->
+				<textarea readonly="readonly" id="addressBox"></textarea>
 			</div>
-			 <button class="btn" data-clipboard-action="copy" data-clipboard-target="h4" id="copyAddress">Copy</button>
 			<div class="copy_btn" id="copyAddress" data-clipboard-action="copy" data-clipboard-target="#addressBox">点击复制钱包地址</div>
 			<div id="qrcode"></div>
 		</div>
