--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -22,7 +22,7 @@
 				<img src="../img/property/code_border.png" alt="" class="codeBorder" />
 			</div>
 			<div class="address_box">
-				<textarea readonly="readonly" id="addressBox"></textarea>
+				<textarea readonly="false" contentEditable="true" id="addressBox"></textarea>
 			</div>
 			<div class="copy_btn" id="copyAddress" data-clipboard-action="copy" data-clipboard-target="#addressBox">点击复制钱包地址</div>
 			<div id="qrcode"></div>
