--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -54,21 +54,41 @@
 				}
 			})
 			// 复制地址 
-			var clipboard = new ClipboardJS('#copyAddress');
-
-			clipboard.on('success', function(e) {
-				mui.toast('复制钱包地址成功', {
-					duration: 2000,
-					type: 'div'
-				})
-			});
-
-			clipboard.on('error', function(e) {
-				mui.toast('复制失败', {
-					duration: 2000,
-					type: 'div'
-				})
-			});
+			//			var clipboard = new ClipboardJS('#copyAddress');
+			//
+			//			clipboard.on('success', function(e) {
+			//				mui.toast('复制钱包地址成功', {
+			//					duration: 2000,
+			//					type: 'div'
+			//				})
+			//			});
+			//
+			//			clipboard.on('error', function(e) {
+			//				mui.toast('复制失败', {
+			//					duration: 2000,
+			//					type: 'div'
+			//				})
+			//			});
+			const el = document.createElement('input');
+			const btn = document.getElementById('copyAddress');
+			el.value = '待复制文本';
+			el.style.opacity = '0';
+			document.body.appendChild(el);
+			const editable = el.contentEditable;
+			const readOnly = el.readOnly;
+			el.contentEditable = true;
+			el.readOnly = false;
+			const range = document.createRange();
+			range.selectNodeContents(el);
+			const sel = window.getSelection();
+			sel.removeAllRanges();
+			sel.addRange(range);
+			el.setSelectionRange(0, 999999);
+			el.contentEditable = editable;
+			el.readOnly = readOnly;
+			const ret = document.execCommand('copy');
+			el.blur();
+			btn.text = ret ? '已复制' : '复制失败';
 		</script>
 	</body>
 
